# chess-3D

./: .gitignore  .travis.yml  0.bootstrap.js  1.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html  style.css
src/: board.rs  color.rs  interface.rs  lib.rs  moves.rs  piece.rs  position.rs  square.rs  weights.rs
www/: index.html  index.js  package.json  style.css
