[package]
name = "chess3d"
version = "0.1.0"
authors = ["WR104 <jzhehyu3@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.35"
wasm-bindgen-futures = "0.4"
futures = { version = "0.3", feature = ["PromiseResolver"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[dependencies.web-sys]
version = "0.3.63"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCollection",
  "DomTokenList",
  "HtmlImageElement",
  "NodeList",
  "MouseEvent",
  "CssStyleDeclaration",
  "HtmlInputElement"
]
